# FalconEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
include/FalconEngine/: CMakeLists.txt  Camera.h  Content.h  ContentInclude.h  Context.h  Core.h  CoreInclude.h  Geometry.h  Graphics.h  GraphicsInclude.h  Handedness.h  Input.h  Math.h  Matrix.h  Point.h  Rectangle.h  Shader.h  Vector2.h  Vector3.h  Vector4.h  Viewport.h
include/FalconEngine/Content/: Asset.h  AssetImportOption.h  AssetImporter.h  AssetManager.h  AssetProcessor.h  AssetTool.h  CerealLibGuardBegin.h  Common.h  ContentInclude.h  CustomImporter.h  Header.h  Macro.h  ModelImportOption.h  ModelImporter.h  Path.h  StbLibGuardBegin.h  StbLibGuardEnd.h  TextureImportOption.h
include/FalconEngine/Context/: ContextInclude.h  Game.h  Game.inl  GameCounter.h  GameDebug.h  GameEngine.h  GameEngineData.h  GameEngineGraphics.h  GameEngineGraphicsSettings.h  GameEngineInput.h  GameEngineInputSettings.h  GameEnginePlatform.h  GameEngineProfiler.h  GameEngineSettings.h  GameEngineWindow.h  GameTimer.h  GameTrace.h  GameWindow.h  Header.h  Macro.h
include/FalconEngine/Core/: Asset.h  CleanWinIncl.h  Common.h  CoreInclude.h  Debug.h  EventCallback.h  EventHandler.h  Exception.h  Game.h  GameContext.h  GameDebug.h  GameEngine.h  GameEngineData.h  GameEngineDebugger.h  GameEngineGraphics.h  GameEngineInput.h  GameEnginePlatform.h  GameEngineProfiler.h  GameEngineSettings.h  GameEngineWindow.h  GamePerformanceCounter.h  GameTrace.h  Macro.h  MacroBinaryLib.h  MacroCodeClarity.h  MacroCodeLib.h  MacroCompileSwitch.h  MacroCompileSwitchLean.h  MacroCompilerWarning.h  MacroErrorCode.h  Memory.h  MemoryPool.h  Object.h  Path.h  ProfileBlock.h  Rtti.h  Rtti.inl  ScopePool.h  String.h  Timer.h  (+2 more)
include/FalconEngine/Core/Objects/: Object.h  Rtti.h  Rtti.inl
include/FalconEngine/Editor/: Common.h
include/FalconEngine/Geometry/: Geometry.h  GeometryMesh.h  GeometryModel.h  Mesh.h  Model.h  Rectangle.h TODO  TextMesh.h TODO  TriangleGeometry.h  TriangleMesh.h  TriangleMesh.inl
include/FalconEngine/Graphics/: Bound.h  Camera.h  FontType.h  GraphicsInclude.h  Header.h  Macro.h  Mesh.h  Point3.h  Renderer.h  SceneInclude.h  Shader.h  ShaderBrewer.h  TextMesh.h  Transform.h  Transform.inl  Viewport.h  Viewport.inl
include/FalconEngine/Graphics/Controllers/: ControlledObject.h  ControlledObject.inl  Controller.h  Controller.inl
include/FalconEngine/Graphics/Effect/: AABBBoundingBoxEffect.h  AABBBoundingBoxInstancingEffect.h  AABBEffect.h  BitmapFontEffect.h  BlinnEffect.h  BlinnPhongShadingEffect.h  BoundingBoxEffect.h  DebugEffect.h  FontEffect.h  MeshEffect.h  PaintEffect.h  PhongEffect.h  PhongLightingEffect.h  PhongShadingEffect.h  SignedDistancedFieldFontEffect.h  SkyEffect.h
include/FalconEngine/Graphics/Effects/: BitmapFontEffect.h  Font.frag.glsl  Font.vert.glsl  PhongLightingEffect.h
include/FalconEngine/Graphics/Renderer/: BitmapFont.h  BitmapLine.h  BitmapWord.h  Camera.h  Primitive.h  PrimitiveLines.h  PrimitivePoints.h  PrimitiveQuads.h  PrimitiveTriangles.h  Primitives.h  Renderer.h  Renderer.h~RFcfecf64.TMP  Viewport.h  Visual.h  VisualEffect.h  VisualEffectInstance.h  VisualEffectInstancePass.h  VisualEffectParams.h  VisualEffectPass.h  VisualGroup.h  VisualLines.h  VisualPoints.h  VisualQuads.h  VisualTriangles.h  Window.h  WindowData.h
include/FalconEngine/Graphics/Renderers/: BitmapFont.h  BitmapFontRenderer.h  Buffer.h  (+21 more)
include/FalconEngine/Input/: Gamepad.h  GamepadHandler.h  Header.h  InputHandler.h  InputInclude.h  InputState.h  KeyState.h  Keyboard.h  KeyboardHandler.h  KeyboardState.h  Macro.h  Mouse.h  MouseButton.h  MouseButtonState.h  MouseController.h  MouseHandler.h  MouseState.h
include/FalconEngine/Math/: AABB.h  Color.h  Common.h  Constant.h  Coordinate.h  Function.h  Handedness.h  Handedness.inl  Header.h  Index.h  Integer.h  Macro.h  Math.h  Matrix.h  Matrix3.h  Matrix4.h  Matrix4f.h  Point2.h  Point3.h  Quaternion.h  Rectangle.h  Rectangle2f.h  Transform.h  Type.h  Vector2.h  Vector2d.h  Vector2f.h  Vector3.h  Vector3d.h  Vector3f.h  Vector3f.inl  Vector4.h  Vector4f.h
include/FalconEngine/Platform/: Common.h
include/FalconEngine/Utility/: Trace.h
src/FalconEngine/Content/: Asset.cpp  AssetImportOption.cpp  AssetImporter.cpp  AssetManager.cpp  AssetPrcoessor.cpp  AssetTool.cpp  CMakeLists.txt  CustomImporter.cpp  ModelImportOption.cpp  ModelImporter.cpp  Path.cpp  TextureImportOption.cpp
src/FalconEngine/Context/: CMakeLists.txt  Game.cpp  GameCounterWin32.cpp  GameDebugWin32.cpp  GameEngine.cpp  GameEngineData.cpp  GameEngineGraphics.cpp  GameEngineGraphicsSettings.cpp  GameEngineInput.cpp  GameEnginePlatform.cpp  GameEngineProfiler.cpp  GameEngineSettings.cpp  GameEngineWindow.cpp
src/FalconEngine/Core/: Asset.cpp  CMakeLists.txt  Exception.cpp  Game.cpp  GameContext.cpp  GameCounterWin32.cpp  GameDebugWin32.cpp  GameEngine.cpp  GameEngineData.cpp  GameEngineDebugger.cpp  GameEngineGraphics.cpp  GameEngineInput.cpp  GameEnginePlatform.cpp  GameEngineProfiler.cpp  GameEngineSettings.cpp  GameEngineWindow.cpp  GamePerformanceCounterWin32.cpp  Memory.cpp  MemoryPool.cpp  Object.cpp  Path.cpp  Rtti.cpp  ScopePool.cpp  String.cpp  Trace.cpp  Utility.cpp
src/FalconEngine/Graphics/: CMakeLists.txt  Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  TextMesh.cpp  Transform.cpp  Viewport.cpp
src/FalconEngine/Input/: CMakeLists.txt  InputState.cpp  KeyState.cpp  Keyboard.cpp  KeyboardHandler.cpp  KeyboardState.cpp  MouseButtonState.cpp  MouseButtonStateMap.cpp  MouseController.cpp  MouseHandler.cpp  MouseState.cpp
src/FalconEngine/Math/: AABB.cpp  CMakeLists.txt  Color.cpp  Coordinate.cpp  Handedness.cpp  Index.cpp  Matrix.cpp  Matrix3.cpp  Matrix4.cpp  Matrix4f.cpp  Point.cpp  Point2.cpp  Quaternion.cpp  Rectangle.cpp  Rectangle2f.cpp  Vector2.cpp  Vector2d.cpp  Vector2f.cpp  Vector3.cpp  Vector3d.cpp  Vector3f.cpp  Vector4.cpp  Vector4f.cpp
src/FalconEngine/Render/: CMakeLists.txt  Camera.cpp  Shader.cpp  Viewport.cpp
src/FalconEngine/Sample/: CMakeLists.txt  SampleGame.h
(+794 files in other folders)
